Finally fixed Horizontal Scrolling

--- a/index.css
+++ b/index.css
@@ -557,7 +557,6 @@
   overflow-y: hidden;
   overflow-x: scroll;
   display: grid;
-  grid-template-columns: auto auto auto;
 }
 
 .container::-webkit-scrollbar{
